--- a/src/style.css
+++ b/src/style.css
@@ -1,51 +1,14 @@
+@font-face {
+  font-family: "Calculator Matrix";
+  src: url("/calculator-matrix-extended-v2.otf");
+}
 body {
-  font-family: system-ui;
   background: #eee;
   display: flex;
 
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
-}
-
-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem 2rem;
-  min-width: 5rem;
-  text-shadow: 0 1px 0 white, inset 0 2px 0 black;
-  color: grey;
-  border-radius: 9rem;
-  font-family: inherit;
-  font-size: inherit;
-  cursor: pointer;
-  border: 1px solid grey;
-  background: linear-gradient(to bottom, white, lightgrey);
-  box-shadow: 0 -2px 2px #0002, 0 2px 2px white, 0 4px 2px lightgrey,
-    inset 0 0 10px #0001;
-  transition: all 0.2s;
-  & > span {
-    display: flex;
-    transition: all 0.2s;
-
-    background-color: #000;
-    color: transparent;
-    text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.4);
-    background-clip: text;
-  }
-  &:active,
-  &.active {
-    box-shadow: 0 -2px 2px #0002, 0 2px 2px white, 0 4px 2px lightgrey,
-      inset 0 0 10px grey;
-
-    & > span {
-      background-color: #00607f;
-
-      transform: scale(0.9);
-    }
-  }
 }
 
 .cd {
@@ -115,8 +78,8 @@ button {
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 4px 4px white, 0 6px 4px lightgrey, 0 -4px 3px lightgrey,
-    inset 0 10px 10px #0005, inset 0 3px 10px #0008;
+  box-shadow: 0 4px 4px white, 0 -4px 3px lightgrey, inset 0 10px 10px #0005,
+    inset 0 3px 10px #0008;
   position: relative;
   border-radius: 9999rem;
 }
@@ -129,25 +92,29 @@ button {
   margin-top: 2rem;
 }
 .dspl {
-  font-family: "Scientific Calculator LCD", system-ui;
+  font-family: "Calculator Matrix", system-ui;
 
   margin-bottom: 2rem;
   height: 4rem;
-  width: 21rem;
+  width: 22rem;
   margin-inline: auto;
   overflow: hidden;
-  background: #331111;
-  box-shadow: inset 0 6px 5px #000;
-  color: red;
+  background: #f0eaff;
+  border-radius: 0.5rem;
+  box-shadow: inset 0 4px 5px #000a, 0 -4px 4px #0003, 0 5px 4px #fff;
   display: flex;
-  text-shadow: 0 0 2px red;
   flex-direction: column;
   justify-content: center;
   padding-inline: 0.5rem;
-  font-size: 0.67rem;
+  /* font-weight: bold; */
+  font-size: 0.9rem;
 }
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+button {
+  padding-inline: 2rem !important;
 }
